src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-quarkus-svc
  namespace: lfa-pipe
spec:
  type: ClusterIP
  selector:
    app: todo-api-quarkus
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
